@@ -66,7 +66,7 @@ public class KeyboardServiceImpl implements KeyboardService {
         var rows = map.entrySet().stream()
                 .map(entry -> buildButtonWithParam(command, entry.getKey(), entry.getValue()))
                 .map(this::wrapToRow)
-                .collect(Collectors.toList());
+                .toList();
         var extraButtons = Arrays.stream(buttons)
                 .map(this::wrapToRow)
                 .toList();
@@ -105,7 +105,7 @@ public class KeyboardServiceImpl implements KeyboardService {
     private InlineKeyboardMarkup buildKeyboardStructure(List<EventStatusButton> names) {
         var buttons = IntStream.rangeClosed(1, 3)
                 .mapToObj(rowNum -> getInlineKeyboardButtons(names, rowNum))
-                .collect(Collectors.toList());
+                .toList();
 
         return InlineKeyboardMarkup.builder()
                 .keyboard(buttons)
@@ -119,7 +119,7 @@ public class KeyboardServiceImpl implements KeyboardService {
                         .text(button.getAlias())
                         .callbackData(button.getAction())
                         .build())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private List<EventStatusButton> buildTimedButtons(Integer time) {
